name:                stomp
version:             0.1.0.0
synopsis:            A Haskell client library for ActiveMQ
description:         Please see README.md
homepage:            http://github.com/githubuser/stomp-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Collins & originally https://code.google.com/u/105961770563373092902/here
maintainer:          
copyright:           2015 Aki Systems Limited
category:            Library
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Stomp
  build-depends:       base >= 4.7 && < 5
                       , network
                       , mtl
  default-language:    Haskell2010

-- executable stomp-hs-exe
  -- hs-source-dirs:      app
  -- main-is:             Main.hs
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  -- build-depends:       base
                     -- , stomp-hs
  -- default-language:    Haskell2010

test-suite stomp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , stomp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/akisystems/stomp-hs
